style.css
body,
html {
  height: 100%;
  margin: 0;
  width: 100%;
  font: 400 15px/1.8 "Lato", sans-serif;
  color: #777;
}
.texteffect {
  /* color: transparent; */
  /* background: #666666; */
  /* -webkit-background-clip: text; */
  /* -moz-background-clip: text; */
  background-clip: text;
  text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
}

.bgimg-1,
.bgimg-2,
.bgimg-3 {
  position: relative;
  opacity: 0.8;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
.bgimg-1 {
  background-image: url("Code.jpg");
  min-height: 100%;
  width: 100%;
  filter: saturate(10%);
}

.bgimg-2 {
  background-image: url("jag.jpg");
  min-height: 400px;
  width: 100%;
  filter: saturate(10%);
}

.bgimg-3 {
  background-image: url("MinBak.jpg");
  min-height: 400px;
  width: 100%;
  filter: saturate(50%);
}

.listitem {
  background-color: #fff;
  color: black;
  border: 1px solid rgb(180, 180, 180);
  border-radius: 3px;
  text-decoration: none;
  padding-left: 8px;
  padding-right: 8px;
  margin-bottom: 4px;
}
.listitem:hover {
  /* background-color: rgb(250, 250, 250); */
  color: rgb(108, 108, 139);
  transform: scale(1.01);
  box-shadow: 3px 3px 8px 0px rgba(0, 0, 0, 0.5);
}

.nomargins {
  margin: 0px;
}
.lighttext {
  color: #2f2f2f;
  /* background: #e8e8e8; */
  text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1),
    1px 1px 1px rgba(255, 255, 255, 1);
}
.time {
  text-align: right;
}

a {
  text-decoration: none;
  padding: 0px;
  margin: 0px;
}
.caption {
  position: absolute;
  left: 0;
  top: 50%;
  width: 100%;
  text-align: center;
  color: #000;
}

.caption span.border {
  background-color: #111;
  color: #fff;
  padding: 18px;
  margin: 4px;
  font-size: 20px;
  letter-spacing: 10px;
}

h3 {
  letter-spacing: 5px;
  text-transform: uppercase;
  font: 20px "Lato", sans-serif;
  color: #fff;
  font-size: 4em;
  text-align: center;
}
h5 {
  padding: 0px 4px 0px 4px;
  margin: 0;
}
p.time {
  padding: 0px 4px 0px 4px;
  margin: 0;
}
p.info {
  padding: 0px 4px 0px 4px;
  margin: 0;
}
@media only screen and (max-device-width: 1024px) {
  body,
  html {
    padding: 0;
    margin: 0;
    width: 100%;
  }
  div {
    padding: 4px !important;
  }
  h5 {
    padding: 0px 4px 0px 4px;
    margin: 0;
  }
  p {
    padding: 0 4px 0 4px;
    margin: 0;
  }

  .bgimg-1,
  .bgimg-2,
  .bgimg-3 {
    padding: 0;
    margin: 0;
    width: 100%;
    background-attachment: scroll;
  }
}

